- Store NULL for empty string.
- HTML5's local database supporting.
- Amazon Web Service supporting.
- Searching in PDFs or any kind of files.
- Popup menu's default value; if there isn't the value of them, set first one.
- PayPal support or sort of.
- The Observer Architecture for both client and server.
 (Followings are from INTER-Mediator Study Meeting 2003#1)
- Calendar Component Support.
- Tab Component Support.

=================================
Known Issues for Browsers:
=================================
Internet Explorer 7
- Checkbox and Radio Button doesn't work. Oops! I won't fix it (I can't!).

Internet Explorer 6 or under are NOT supported!
FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.

Ver.3.10-dev
- [BUG FIX] Fix DataConverter_FMDateTime and DataConverter_MySQLDateTime's issue on Windows.

Ver.3.9 (2013/9/28)
- The definition file editor works reading/writing. You can call it at the start of logs on debug mode.
- Customize the login panel by CSS definitions.
- The title of the login panel can be set to property as like "INTERMediatorOnPage.authPanelTitle = "title";".
- Update FX.php to fix compatibility with FileMaker Server 12.
- Enable omitting to place the primary key field object on a layout when using FileMaker Server
  (by specifying 'key' => '-recid').
- MediaAccess can choose inline or attachment.
- [BUG FIX] Fix display unnecessary insert button and delete button on the navigation bar after pressing an "enter" key
            in the text box of the moving page control on the navigation bar (WebKit browsers only).
- [BUG FIX] Authentication and Authorization for groups.
- [BUG FIX] FileMaker_FX class isolates the FX object to data and auth.