@@ -29,6 +29,7 @@ To Do List for the INTER-Mediator developer(s)
 - Popup menu's default value; if there isn't the value of them, set first one.
 - PayPal support or sort of.
 - The Observer Architecture for both client and server.
+- [WIP] Support FileMaker's portal access.
  (Followings are from INTER-Mediator Study Meeting 2003#1)
 - Calendar Component Support.
 - Tab Component Support.
